--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
         <h2 class="work-section-header">Чем мы занимаемся</h2>
         <ul class="work-section-list list">
             <li class="item">
-                <img class="image" src="./img/work-1.png" alt="Разработка десктопных приложений" width="380" height="294">
+                <img class="image" src="./img/work-1.jpg" alt="Разработка десктопных приложений" width="380" height="294">
                 <h3>Десктопные приложения</h3>
             </li>
             <li class="item">
-                <img class="image" src="./img/work-2.png" alt="Разработка мобильных приложений" width="380" height="294">
+                <img class="image" src="./img/work-2.jpg" alt="Разработка мобильных приложений" width="380" height="294">
                 <h3>Мобильные приложения</h3>
             </li>
             <li class="item">
-                <img class="image" src="./img/work-3.png" alt="Разработка дизайнерских решений" width="380" height="294">
+                <img class="image" src="./img/work-3.jpg" alt="Разработка дизайнерских решений" width="380" height="294">
                 <h3>Дизайнерские решения</h3>
             </li>
         </ul>
@@ -100,7 +100,7 @@
             <h2 class="team-section-header">Наша команда</h2>
             <ul class="team-section-list list">
                 <li class="item">
-                    <img class="teammate-image" src="./img/john-smith.png" alt="John Smith" width="278" height="260">
+                    <img class="teammate-image" src="./img/john-smith.jpg" alt="John Smith" width="278" height="260">
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul class="list social-links">
@@ -135,7 +135,7 @@
                     </ul>
                 </li>
                 <li class="item">
-                    <img class="teammate-image" src="./img/marta-stewart.png" alt="Marta Stewart" width="278" height="260">
+                    <img class="teammate-image" src="./img/marta-stewart.jpg" alt="Marta Stewart" width="278" height="260">
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul class="list social-links">
@@ -170,7 +170,7 @@
                     </ul>
                 </li>
                 <li class="item">
-                    <img class="teammate-image" src="./img/robert-jakis.png" alt="Robert Jakis" width="278" height="260">
+                    <img class="teammate-image" src="./img/robert-jakis.jpg" alt="Robert Jakis" width="278" height="260">
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul class="list social-links">
@@ -205,7 +205,7 @@
                     </ul>
                 </li>
                 <li class="item">
-                    <img class="teammate-image" src="./img/martin-doe.png" alt="Martin Doe" width="278" height="260">
+                    <img class="teammate-image" src="./img/martin-doe.jpg" alt="Martin Doe" width="278" height="260">
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul class="list social-links">
