--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
        <ul class="list work-list">
         <li class="item">
             <a href="#">
-                <img class="image" width="380" height="294" src="./img/portfolio/project-1.png"
+                <img class="image" width="380" height="294" src="./img/portfolio/project-1.jpg"
                     alt="Иллюстрация работы Технокряк">
                 <div class="work-item-title">
                     <h2 class="portfolio-section-card-title">Технокряк</h2>
@@ -71,7 +71,7 @@
         </li>
         <li class="item">
             <a href="#">
-                <img class="image" width="380" height="294" src="./img/portfolio/project-2.png"
+                <img class="image" width="380" height="294" src="./img/portfolio/project-2.jpg"
                     alt="Иллюстрация работы Постер New Orlean vs Golden Stars">
                 <div class="work-item-title">
                     <h2 class="portfolio-section-card-title">Постер New Orlean vs Golden Stars</h2>
@@ -83,7 +83,7 @@
         </li>
         <li class="item">
             <a href="#">
-                <img class="image" width="380" height="294" src="./img/portfolio/project-3.png"
+                <img class="image" width="380" height="294" src="./img/portfolio/project-3.jpg"
                     alt="Иллюстрация работы Ресторан Seafood">
                 <div class="work-item-title">
                     <h2 class="portfolio-section-card-title">Ресторан Seafood</h2>
@@ -95,7 +95,7 @@
         </li>
            <li class="item">
                <a href="#">
-                <img class="image" width="380" height="294" src="./img/portfolio/project-4.png" alt="Иллюстрация работы Проект Prime">
+                <img class="image" width="380" height="294" src="./img/portfolio/project-4.jpg" alt="Иллюстрация работы Проект Prime">
                 <div class="work-item-title">
                     <h2 class="portfolio-section-card-title">Проект Prime</h2>
                     <p class="portfolio-section-card-category">Маркетинг</p>
@@ -105,7 +105,7 @@
            </li>
            <li class="item">
             <a href="#">
-                <img class="image" width="380" height="294" src="./img/portfolio/project-5.png"
+                <img class="image" width="380" height="294" src="./img/portfolio/project-5.jpg"
                     alt="Иллюстрация работы Проект Boxes">
                 <div class="work-item-title">
                     <h2 class="portfolio-section-card-title">Проект Boxes</h2>
@@ -117,7 +117,7 @@
            </li>
            <li class="item">
             <a href="#">
-                <img class="image" width="380" height="294" src="./img/portfolio/project-6.png"
+                <img class="image" width="380" height="294" src="./img/portfolio/project-6.jpg"
                     alt="Иллюстрация работы Inspiration has no Borders">
                 <div class="work-item-title">
             
@@ -130,7 +130,7 @@
            </li>
            <li class="item">
             <a href="#">
-                <img class="image" width="380" height="294" src="./img/portfolio/project-7.png"
+                <img class="image" width="380" height="294" src="./img/portfolio/project-7.jpg"
                     alt="Иллюстрация работы Издание Limited Edition">
                 <div class="work-item-title">
                     <h2 class="portfolio-section-card-title">Издание Limited Edition</h2>
@@ -142,7 +142,7 @@
            </li>
             <li class="item">
                 <a href="#">
-                    <img class="image" width="380" height="294" src="./img/portfolio/project-8.png"
+                    <img class="image" width="380" height="294" src="./img/portfolio/project-8.jpg"
                         alt="Иллюстрация работы Проект LAB">
                     <div class="work-item-title">
                         <h2 class="portfolio-section-card-title">Проект LAB</h2>
@@ -154,7 +154,7 @@
             </li>
             <li class="item">
                 <a href="#">
-                    <img class="image" width="380" height="294" src="./img/portfolio/project-9.png"
+                    <img class="image" width="380" height="294" src="./img/portfolio/project-9.jpg"
                         alt="Иллюстрация работы Growing Business">
                     <div class="work-item-title">
                         <h2 class="portfolio-section-card-title">Growing Business</h2>
