Implemented correct SVG highlight effect

--- a/portfolio.html
+++ b/portfolio.html
@@ -186,26 +186,26 @@
                 <ul class="list join-us-list">
                     <li class="item">
                         <a href="https://instagram.com" aria-label="Мы в Instagram" class="footer-social-link">
-                            <svg width="20" height="20">
+                            <svg width="20" height="20" class="footer-social-link-icon">
                                 <use href="./img/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="footer-social-link" href="https://twitter.com" aria-label="Мы в Twitter">
-                            <svg width="20" height="20">
+                            <svg width="20" height="20" class="footer-social-link-icon">
                                 <use href="./img/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item"><a class="footer-social-link" href="https://facebook.com" aria-label="Мы в Facebook">
-                            <svg width="20" height="20">
+                            <svg width="20" height="20" class="footer-social-link-icon">
                                 <use href="./img/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item"><a class="footer-social-link" href="https://linkedin.com" aria-label="Мы в LinkedIn">
-                         <svg width="20" height="20">
+                         <svg width="20" height="20" class="footer-social-link-icon">
                             <use href="./img/icons.svg#icon-linkedin"></use>
                         </svg>
                         </a>
