--- a/index.html
+++ b/index.html
@@ -106,28 +106,28 @@
                     <ul class="list social-links">
                         <li class="item">
                             <a href="https://instagram.com" aria-label="Instagram страница John Smith" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://twitter.com" aria-label="Twitter страница John Smith" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://facebook.com" aria-label="Facebook страница John Smith" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://linkedin.com" aria-label="LinkedIn страница John Smith" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -141,28 +141,28 @@
                     <ul class="list social-links">
                         <li class="item">
                             <a href="https://instagram.com" aria-label="Instagram страница Marta Stewart" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://twitter.com" aria-label="Twitter страница Marta Stewart" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://facebook.com" aria-label="Facebook страница Marta Stewart" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://linkedin.com" aria-label="LinkedIn страница Marta Stewart" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -176,28 +176,28 @@
                     <ul class="list social-links">
                         <li class="item">
                             <a href="https://instagram.com" aria-label="Instagram страница Robert Jakis" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://twitter.com" aria-label="Twitter страница Robert Jakis" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://facebook.com" aria-label="Facebook страница Robert Jakis" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://linkedin.com" aria-label="LinkedIn страница Robert Jakis" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -211,28 +211,28 @@
                     <ul class="list social-links">
                         <li class="item">
                             <a href="https://instagram.com" aria-label="Instagram страница Martin Doe" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://twitter.com" aria-label="Twitter страница Martin Doe" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://facebook.com" aria-label="Facebook страница Martin Doe" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="https://linkedin.com" aria-label="LinkedIn страница Martin Doe" class="social-link">
-                                <svg width="20" height="20">
+                                <svg width="20" height="20" class="social-link-icon">
                                     <use href="./img/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -249,42 +249,42 @@
         <ul class="clients-section-list list">
             <li class="item">
                 <a class="client-link" href="#">
-                    <svg width="44" height="49">
+                    <svg width="44" height="49" class="client-link-icon">
                         <use href='./img/icons.svg#icon-logo-1'></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
                 <a class="client-link" href="#">
-                    <svg width="40" height="52">
+                    <svg width="40" height="52" class="client-link-icon">
                         <use href='./img/icons.svg#icon-logo-2'></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
                 <a class="client-link" href="#">
-                    <svg width="41" height="42">
+                    <svg width="41" height="42" class="client-link-icon">
                         <use href='./img/icons.svg#icon-logo-3'></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
                 <a class="client-link" href="#">
-                    <svg width="80" height="42">
+                    <svg width="80" height="42" class="client-link-icon">
                         <use href='./img/icons.svg#icon-logo-4'></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
                 <a class="client-link" href="#">
-                    <svg width="59" height="47">
+                    <svg width="59" height="47" class="client-link-icon">
                         <use href='./img/icons.svg#icon-logo-5'></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
                 <a class="client-link" href="#">
-                    <svg width="88" height="45">
+                    <svg width="88" height="45" class="client-link-icon">
                         <use href='./img/icons.svg#icon-logo-6'></use>
                     </svg>
                 </a>
@@ -311,26 +311,26 @@
                 <ul class="list join-us-list">
                     <li class="item">
                         <a href="https://instagram.com" aria-label="Мы в Instagram" class="footer-social-link">
-                            <svg width="20" height="20">
+                            <svg width="20" height="20" class="footer-social-link-icon">
                                 <use href="./img/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="footer-social-link" href="https://twitter.com" aria-label="Мы в Twitter">
-                            <svg width="20" height="20">
+                            <svg width="20" height="20" class="footer-social-link-icon">
                                 <use href="./img/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item"><a class="footer-social-link" href="https://facebook.com" aria-label="Мы в Facebook">
-                            <svg width="20" height="20">
+                            <svg width="20" height="20" class="footer-social-link-icon">
                                 <use href="./img/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item"><a class="footer-social-link" href="https://linkedin.com" aria-label="Мы в LinkedIn">
-                         <svg width="20" height="20">
+                         <svg width="20" height="20" class="footer-social-link-icon">
                             <use href="./img/icons.svg#icon-linkedin"></use>
                         </svg>
                         </a>
