--- a/index.html
+++ b/index.html
@@ -345,7 +345,9 @@
         </div>
 
         <!--Copyright-->
-        <p class="footer-copyright">2020 | Developed by GoIT Students </p>
+        <div class="container">
+            <p class="footer-copyright">2020 | Developed by GoIT Students </p>
+        </div>
     </footer>
 </body>
 
