--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,9 @@
         </div>
 
         <!--Copyright-->
-        <p class="footer-copyright">2020 | Developed by GoIT Students </p>
+        <div class="container">
+            <p class="footer-copyright">2020 | Developed by GoIT Students </p>
+        </div>
     </footer>
 </body>
 
