--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             </li>
 
             <li class="item">
-                <a href="tel:+38 096 111 11 11" class="contact-link">
+                <a href="tel:+380961111111" class="contact-link">
                     <svg width="10" height="15" class="contact-icon">
                         <use href="./img/icons.svg#icon-smartphone"></use>
                     </svg>
